force-app/main/default/objects/PaymentTypeDetail__c/PaymentTypeDetail__c.object-meta.xml
<CustomObject>
    <label>Payment Type Detail</label>
    <nameField>
        <label>Payment Type Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Type Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>