force-app/main/default/objects/PaymentTypeDetail__c/fields/FeeCount__c.field-meta.xml
<CustomField>
    <fullName>FeeCount__c</fullName>
    <label>Fee Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>