force-app/main/default/objects/PaymentTypeDetail__c/fields/FeeValue__c.field-meta.xml
<CustomField>
    <fullName>FeeValue__c</fullName>
    <label>Fee Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>