force-app/main/default/objects/PaymentTypeDetail__c/fields/MeasurementUnitMonthly__c.field-meta.xml
<CustomField>
    <fullName>MeasurementUnitMonthly__c</fullName>
    <label>Measurement Unit (Monthly)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>