force-app/main/default/objects/PaymentTypeDetail__c/fields/PaymentType__c.field-meta.xml
<CustomField>
    <fullName>PaymentType__c</fullName>
    <label>Payment Type</label>
    <referenceTo>PaymentType__c</referenceTo>
    <relationshipLabel>Payment Type Details</relationshipLabel>
    <relationshipName>PaymentTypeDetails</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>