force-app/main/default/objects/PaymentTypeDetail__c/recordTypes/LinksOneShot.recordType-meta.xml
<RecordType>
    <fullName>LinksOneShot</fullName>
    <active>true</active>
    <label>Links One Shot</label>
</RecordType>