force-app/main/default/objects/PaymentTypeDetail__c/recordTypes/LinksRecursive.recordType-meta.xml
<RecordType>
    <fullName>LinksRecursive</fullName>
    <active>true</active>
    <label>Links Recursive</label>
</RecordType>