force-app/main/default/objects/PaymentTypeDetail__c/recordTypes/NexusOneShot.recordType-meta.xml
<RecordType>
    <fullName>NexusOneShot</fullName>
    <active>true</active>
    <label>Nexus One Shot</label>
</RecordType>