force-app/main/default/objects/PaymentTypeDetail__c/recordTypes/NexusRecursive.recordType-meta.xml
<RecordType>
    <fullName>NexusRecursive</fullName>
    <active>true</active>
    <label>Recursive</label>
</RecordType>