force-app/main/default/objects/PaymentTypeDetail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>PaymentType__c</columns>
    <columns>Description__c</columns>
    <columns>FeeCount__c</columns>
    <columns>FeeValue__c</columns>
    <columns>Rank__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>Value__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>